# advent-of-code-2024

./: .gitignore  README.md
day-01/: CMakeLists.txt  day-01.cpp
day-02/: CMakeLists.txt  day-02.cpp
day-03/: CMakeLists.txt  day-03.cpp
day-04/: CMakeLists.txt  day-04.cpp
day-05/: CMakeLists.txt  day-05.cpp
day-06/: CMakeLists.txt  day-06.cpp
day-07/: CMakeLists.txt  day-07.cpp
day-08/: CMakeLists.txt  day-08.cpp
day-09/: CMakeLists.txt  day-09.cpp
day-1/: CMakeLists.txt  day1.cpp
day-10/: CMakeLists.txt  day-10.cpp
day-11/: CMakeLists.txt  day-11.cpp
day-12/: CMakeLists.txt  day-12.cpp
